Added feature to show play-off charts

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -750,6 +750,113 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## print play-off games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4cf5e8781c3448d59a4af93d016f6b6b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
+    "round_16_outputs = []\n",
+    "quarter_outputs = []\n",
+    "semi_quarter_outputs = []\n",
+    "final_and_third_outputs = []\n",
+    "\n",
+    "for i in range(8):\n",
+    "    round_16_outputs.append(widgets.Output(layout={ 'width':'230px','height':'100px'}))\n",
+    "    quarter_outputs.append(widgets.Output(layout={'width':'230px','height':'100px'}))\n",
+    "    semi_quarter_outputs.append(widgets.Output(layout={'width':'230px','height':'100px'}))\n",
+    "    final_and_third_outputs.append(widgets.Output(layout={'width':'230px','height':'100px'}))\n",
+    "\n",
+    "i = 0\n",
+    "ii = 1\n",
+    "iii = 2\n",
+    "for match_id, match in match_dict.items():\n",
+    "    if match.stage_name == \"Round of 16\":\n",
+    "        with round_16_outputs[i]:\n",
+    "            print(match.stage_name + \": \" + match_id)\n",
+    "            print(match.datetime)\n",
+    "            print(match.status)\n",
+    "            if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
+    "                print(match.getHomeTeam().getCountryName() + \" v.s \" + match.getAwayTeam().getCountryName())\n",
+    "            if match.isCompleted():\n",
+    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "        i = i + 1\n",
+    "                \n",
+    "    if match.stage_name == \"Quarter-finals\":\n",
+    "        with quarter_outputs[ii]:\n",
+    "            print(match.stage_name + \": \" + match_id)\n",
+    "            print(match.datetime)\n",
+    "            print(match.status)\n",
+    "            if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
+    "                print(match.getHomeTeam().getCountryName() + \" v.s \" + match.getAwayTeam().getCountryName())\n",
+    "            if match.isCompleted():\n",
+    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "        ii = ii + 2\n",
+    "        \n",
+    "    if match.stage_name == \"Semi-finals\":\n",
+    "        with semi_quarter_outputs[iii]:\n",
+    "            print(match.stage_name + \": \" + match_id)\n",
+    "            print(match.datetime)\n",
+    "            print(match.status)\n",
+    "            if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
+    "                print(match.getHomeTeam().getCountryName() + \" v.s \" + match.getAwayTeam().getCountryName())\n",
+    "            if match.isCompleted():\n",
+    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "        iii = iii + 3\n",
+    "        \n",
+    "\n",
+    "    if match.stage_name == \"Play-off for third place\":\n",
+    "        with final_and_third_outputs[3]:\n",
+    "            print(match.stage_name + \": \" + match_id)\n",
+    "            print(match.datetime)\n",
+    "            print(match.status)\n",
+    "            if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
+    "                print(match.getHomeTeam().getCountryName() + \" v.s \" + match.getAwayTeam().getCountryName())\n",
+    "            if match.isCompleted():\n",
+    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "                \n",
+    "    if match.stage_name == \"Final\":\n",
+    "        with final_and_third_outputs[4]:\n",
+    "            print(match.stage_name + \": \" + match_id)\n",
+    "            print(match.datetime)\n",
+    "            print(match.status)\n",
+    "            if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
+    "                print(match.getHomeTeam().getCountryName() + \" v.s \" + match.getAwayTeam().getCountryName())\n",
+    "            if match.isCompleted():\n",
+    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "                \n",
+    "\n",
+    "round_16_outputs_box = widgets.VBox(round_16_outputs)\n",
+    "quarter_outputs_box = widgets.VBox(quarter_outputs)\n",
+    "semi_quarter_outputs_box = widgets.VBox(semi_quarter_outputs)\n",
+    "final_and_third_outputs_box = widgets.VBox(final_and_third_outputs)\n",
+    "display(widgets.HBox([round_16_outputs_box, quarter_outputs_box, semi_quarter_outputs_box, final_and_third_outputs_box]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
