Added team buttons linking wikipedia page in play-off game table

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -533,8 +533,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "all_matches_json = urllib.request.urlopen('http://worldcup.sfg.io/matches')\n",
@@ -581,13 +583,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51ebb03073124d308c65fb1b4597cc65",
+       "model_id": "75d7534f427449b294a00d993f4cd6cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -757,13 +759,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cf5e8781c3448d59a4af93d016f6b6b",
+       "model_id": "c1a302e0b40c460a9021cda79ace64dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -777,17 +779,58 @@
    ],
    "source": [
     "import ipywidgets as widgets\n",
+    "import webbrowser\n",
+    "\n",
+    "def open_national_tean_wiki_link_on_click(b):\n",
+    "    team_url = \"https://en.wikipedia.org/wiki/\" + b.country_name + \"_national_football_team\"\n",
+    "    webbrowser.open(team_url, new=2, autoraise=True)\n",
     "\n",
     "round_16_outputs = []\n",
     "quarter_outputs = []\n",
     "semi_quarter_outputs = []\n",
     "final_and_third_outputs = []\n",
-    "\n",
+    "layout_with_border = {'border': '2px solid black', 'width':'230px','height':'120px'}\n",
+    "layout_without_border = {'width':'230px','height':'120px'}\n",
     "for i in range(8):\n",
-    "    round_16_outputs.append(widgets.Output(layout={ 'width':'230px','height':'100px'}))\n",
-    "    quarter_outputs.append(widgets.Output(layout={'width':'230px','height':'100px'}))\n",
-    "    semi_quarter_outputs.append(widgets.Output(layout={'width':'230px','height':'100px'}))\n",
-    "    final_and_third_outputs.append(widgets.Output(layout={'width':'230px','height':'100px'}))\n",
+    "    round_16_outputs.append(widgets.Output(layout=layout_with_border))\n",
+    "    if i%2 == 1:\n",
+    "        quarter_outputs.append(widgets.Output(layout=layout_with_border))\n",
+    "    else:\n",
+    "        quarter_outputs.append(widgets.Output(layout=layout_without_border))\n",
+    "    if i==2 or i==5:\n",
+    "        semi_quarter_outputs.append(widgets.Output(layout=layout_with_border))\n",
+    "    else:\n",
+    "        semi_quarter_outputs.append(widgets.Output(layout=layout_without_border))\n",
+    "    if i==3 or i==4:\n",
+    "        final_and_third_outputs.append(widgets.Output(layout=layout_with_border))\n",
+    "    else:\n",
+    "        final_and_third_outputs.append(widgets.Output(layout=layout_without_border))\n",
+    "    \n",
+    "def print_match_info(match):\n",
+    "        print(match.stage_name + \": \" + match_id)\n",
+    "        print(match.datetime)\n",
+    "        #print(match.status)\n",
+    "        if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
+    "            button_home_team = widgets.Button(description = match.getHomeTeam().getCountryName(),\n",
+    "                                              layout={ 'width':'110px','height':'25px'})\n",
+    "            button_away_team = widgets.Button(description = match.getAwayTeam().getCountryName(),\n",
+    "                                              layout={ 'width':'110px','height':'25px'})\n",
+    "            button_home_team.country_name = match.getHomeTeam().getCountryName()\n",
+    "            button_away_team.country_name = match.getAwayTeam().getCountryName()\n",
+    "            button_home_team.on_click(open_national_tean_wiki_link_on_click)\n",
+    "            button_away_team.on_click(open_national_tean_wiki_link_on_click)\n",
+    "            display(widgets.HBox([button_home_team, button_away_team]))\n",
+    "        else:\n",
+    "            print(\"Teams: TBD\")\n",
+    "        if match.isCompleted():\n",
+    "            result_out = widgets.Output()\n",
+    "            with result_out:\n",
+    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "            display(result_out)\n",
+    "        else:\n",
+    "            print(match.status)\n",
+    "\n",
+    "    \n",
     "\n",
     "i = 0\n",
     "ii = 1\n",
@@ -795,57 +838,27 @@
     "for match_id, match in match_dict.items():\n",
     "    if match.stage_name == \"Round of 16\":\n",
     "        with round_16_outputs[i]:\n",
-    "            print(match.stage_name + \": \" + match_id)\n",
-    "            print(match.datetime)\n",
-    "            print(match.status)\n",
-    "            if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
-    "                print(match.getHomeTeam().getCountryName() + \" v.s \" + match.getAwayTeam().getCountryName())\n",
-    "            if match.isCompleted():\n",
-    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "            print_match_info(match)\n",
     "        i = i + 1\n",
     "                \n",
     "    if match.stage_name == \"Quarter-finals\":\n",
     "        with quarter_outputs[ii]:\n",
-    "            print(match.stage_name + \": \" + match_id)\n",
-    "            print(match.datetime)\n",
-    "            print(match.status)\n",
-    "            if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
-    "                print(match.getHomeTeam().getCountryName() + \" v.s \" + match.getAwayTeam().getCountryName())\n",
-    "            if match.isCompleted():\n",
-    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "            print_match_info(match)\n",
     "        ii = ii + 2\n",
     "        \n",
     "    if match.stage_name == \"Semi-finals\":\n",
     "        with semi_quarter_outputs[iii]:\n",
-    "            print(match.stage_name + \": \" + match_id)\n",
-    "            print(match.datetime)\n",
-    "            print(match.status)\n",
-    "            if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
-    "                print(match.getHomeTeam().getCountryName() + \" v.s \" + match.getAwayTeam().getCountryName())\n",
-    "            if match.isCompleted():\n",
-    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "            print_match_info(match)\n",
     "        iii = iii + 3\n",
     "        \n",
     "\n",
     "    if match.stage_name == \"Play-off for third place\":\n",
     "        with final_and_third_outputs[3]:\n",
-    "            print(match.stage_name + \": \" + match_id)\n",
-    "            print(match.datetime)\n",
-    "            print(match.status)\n",
-    "            if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
-    "                print(match.getHomeTeam().getCountryName() + \" v.s \" + match.getAwayTeam().getCountryName())\n",
-    "            if match.isCompleted():\n",
-    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "            print_match_info(match)\n",
     "                \n",
     "    if match.stage_name == \"Final\":\n",
     "        with final_and_third_outputs[4]:\n",
-    "            print(match.stage_name + \": \" + match_id)\n",
-    "            print(match.datetime)\n",
-    "            print(match.status)\n",
-    "            if (match.getHomeTeam() != None) and (match.getAwayTeam() != None):\n",
-    "                print(match.getHomeTeam().getCountryName() + \" v.s \" + match.getAwayTeam().getCountryName())\n",
-    "            if match.isCompleted():\n",
-    "                print(str(match.getHomeTeamGoals()) + \" - \" + str(match.getAwayTeamGoals()))\n",
+    "            print_match_info(match)\n",
     "                \n",
     "\n",
     "round_16_outputs_box = widgets.VBox(round_16_outputs)\n",
