Changed showing "starting eleven" to "squads" by adding "substitutes"

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -414,7 +414,7 @@
     "                self.winner = self.home_team if self.home_team.getFifaCode() == winner else self.away_team\n",
     "            else:\n",
     "                self.winner = \"Draw\"\n",
-    "            self._buildStartingElevenList()\n",
+    "            self._buildSquadList()\n",
     "            self._buildOrderedEventList()\n",
     "        else:\n",
     "            self.ordered_event_list = []\n",
@@ -431,15 +431,19 @@
     "        e_list = self.home_event_list + self.away_event_list\n",
     "        self.ordered_event_list = sorted(e_list, key=itemgetter(\"time\",\"id\"))\n",
     "        \n",
-    "    def _buildStartingElevenList(self):\n",
+    "    def _buildSquadList(self):\n",
     "        if self.home_team_statistics:\n",
     "            self.home_team_starting_eleven = self.home_team_statistics['starting_eleven']\n",
+    "            self.home_team_substitutes = self.home_team_statistics['substitutes']\n",
     "        else:\n",
     "            self.home_team_starting_eleven = []\n",
+    "            self.home_team_substitutes = []\n",
     "        if self.away_team_statistics:\n",
     "            self.away_team_starting_eleven = self.away_team_statistics['starting_eleven']\n",
+    "            self.away_team_substitutes = self.away_team_statistics['substitutes']\n",
     "        else:\n",
     "            self.away_team_starting_eleven = []\n",
+    "            self.away_team_substitutes = []\n",
     "    \n",
     "    def getMatchId(self):\n",
     "        return self.fifa_id\n",
@@ -467,6 +471,12 @@
     "    \n",
     "    def getAwayTeamGoals(self):\n",
     "        return self.away_team_goals\n",
+    "    \n",
+    "    def getHomeTeamSubstitutes(self):\n",
+    "        return self.home_team_substitutes\n",
+    "\n",
+    "    def getAwayTeamSubstitutes(self):\n",
+    "        return self.away_team_substitutes\n",
     "    \n",
     "    def printBasicMatchInfo(self):\n",
     "        print(\"Venue:          \" + self.venue + \", \" + self.location)\n",
@@ -583,13 +593,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75d7534f427449b294a00d993f4cd6cf",
+       "model_id": "48417a26f34b4df18bdda6ba50bb03f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -679,7 +689,9 @@
     "    with show_starting_eleven_out:\n",
     "        home_team_starting_eleven_output_list = []\n",
     "        away_team_starting_eleven_output_list = []\n",
-    "\n",
+    "        sub_title = widgets.Output()\n",
+    "        with sub_title:\n",
+    "            print(\"Substitutes:\")\n",
     "        team_name = widgets.Output(layout={'border': '2px solid black'})\n",
     "        with team_name:\n",
     "            print(x.getHomeTeam().getCountryName())\n",
@@ -697,14 +709,38 @@
     "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
     "                display(p)\n",
     "            home_team_starting_eleven_output_list.append(player_info)\n",
+    "        home_team_starting_eleven_output_list.append(sub_title)\n",
+    "        for player in x.getHomeTeamSubstitutes():\n",
+    "            player_info = widgets.Output()\n",
+    "            with player_info:\n",
+    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
+    "                                   layout = {'width':'300px','height':'30px'})\n",
+    "                p.style.button_color = home_team_player_pos_color_dict['captain'] if player['captain']\\\n",
+    "                                       else home_team_player_pos_color_dict[player['position']]\n",
+    "                p.player_name = player['name']\n",
+    "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "                display(p)\n",
+    "            home_team_starting_eleven_output_list.append(player_info)\n",
     "\n",
     "        team_name = widgets.Output(layout={'border': '2px solid black'})\n",
     "        with team_name:\n",
     "            print(x.getAwayTeam().getCountryName())\n",
     "        away_team_starting_eleven_output_list.append(team_name)\n",
-    "        for player in x.getAwayTeamStartingEleven():\n",
+    "        for player in x.getHomeTeamStartingEleven():\n",
     "            player_info = widgets.Output()\n",
     "            cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
+    "            with player_info:\n",
+    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
+    "                                   layout = {'width':'300px','height':'30px'})\n",
+    "                p.style.button_color = away_team_player_pos_color_dict['captain'] if player['captain']\\\n",
+    "                                      else away_team_player_pos_color_dict[player['position']]\n",
+    "                p.player_name = player['name']\n",
+    "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "                display(p)\n",
+    "            away_team_starting_eleven_output_list.append(player_info)\n",
+    "        away_team_starting_eleven_output_list.append(sub_title)\n",
+    "        for player in x.getAwayTeamSubstitutes():\n",
+    "            player_info = widgets.Output()\n",
     "            with player_info:\n",
     "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
     "                                   layout = {'width':'300px','height':'30px'})\n",
@@ -713,7 +749,6 @@
     "                p.player_name = player['name']\n",
     "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
     "                display(p)\n",
-    "\n",
     "            away_team_starting_eleven_output_list.append(player_info)\n",
     "\n",
     "        home_11_vbox = widgets.VBox(home_team_starting_eleven_output_list)\n",
@@ -726,7 +761,7 @@
     "        match_info_tab.set_title(0, \"Match Events\")\n",
     "        match_info_tab.set_title(1, x.getHomeTeam().getCountryName() + \" statistics\")\n",
     "        match_info_tab.set_title(2, x.getAwayTeam().getCountryName() + \" statistics\")\n",
-    "        match_info_tab.set_title(3, \"Starting Elevens\")\n",
+    "        match_info_tab.set_title(3, \"Team Squads\")\n",
     "        display(match_info_tab)\n",
     "\n",
     "def showTeamInfo(x):\n",
@@ -759,13 +794,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1a302e0b40c460a9021cda79ace64dd",
+       "model_id": "0dd1fe0e6b2745e3a9eaa718599d7719",
        "version_major": 2,
        "version_minor": 0
       },
