--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -593,13 +593,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48417a26f34b4df18bdda6ba50bb03f7",
+       "model_id": "d791f75345db48aa93683684b9c5cbb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -631,129 +631,134 @@
     "\n",
     "\n",
     "def showMatchInfo(x):\n",
+    "    # display basic match info\n",
     "    match_info_out.clear_output()\n",
     "    with match_info_out:\n",
     "        x.printBasicMatchInfo()\n",
     "    display(match_info_out)\n",
+    "    \n",
+    "    # match event output in tab\n",
+    "    match_event_list_out = widgets.Output()\n",
     "    f_flag_home = open(\"./statics/Flag_of_\" + x.getHomeTeam().getCountryName() + \".svg.png\", 'rb').read()\n",
     "    f_flag_away = open(\"./statics/Flag_of_\" + x.getAwayTeam().getCountryName() + \".svg.png\", 'rb').read()\n",
     "    flag_home = widgets.Image(value=f_flag_home, format='png', width=45, height=9)\n",
     "    flag_away = widgets.Image(value=f_flag_away, format='png', width=45, height=9)\n",
-    "    match_event_list_out = widgets.Output()\n",
-    "    with match_event_list_out:\n",
-    "        for e in x.getOrderedEventsList():\n",
-    "            if e[\"type_of_event\"] in ['yellow-card', 'red-card', 'substitution-in', 'substitution-out']:\n",
-    "                f_event_type = open(\"./statics/\" + e[\"type_of_event\"] + \".svg.png\", 'rb').read()\n",
-    "                event_type = widgets.Image(value=f_event_type, format='png', width=20, height=24)\n",
-    "            elif e['type_of_event'] == \"yellow-card-second\":\n",
-    "                f_event_type = open(\"./statics/yellow-card-second.svg.png\", 'rb').read()\n",
-    "                event_type = widgets.Image(value=f_event_type, format='png', width=50, height=24)\n",
-    "            elif e['type_of_event'] in ['goal-own','goal-penalty', 'goal']:\n",
-    "                goal_type_out = widgets.Output(layout={'border': '1px solid red'})\n",
-    "                with goal_type_out:\n",
-    "                    if e['type_of_event'] == 'goal-own':\n",
-    "                        print(\"o.g.\")\n",
-    "                    elif e['type_of_event'] == 'goal-penalty':\n",
-    "                        print(\"pen.\")\n",
-    "                f_event_type = open(\"./statics/goal.svg.png\", 'rb').read()\n",
-    "                if e['type_of_event'] == 'goal':\n",
-    "                    event_type = widgets.Image(value=f_event_type, format='png', width=24, height=24)\n",
-    "                else:\n",
-    "                    event_type = widgets.HBox([widgets.Image(value=f_event_type, format='png', width=24, height=24), goal_type_out])\n",
+    "    for e in x.getOrderedEventsList():\n",
+    "        if e[\"type_of_event\"] in ['yellow-card', 'red-card', 'substitution-in', 'substitution-out']:\n",
+    "            f_event_type = open(\"./statics/\" + e[\"type_of_event\"] + \".svg.png\", 'rb').read()\n",
+    "            event_type = widgets.Image(value=f_event_type, format='png', width=20, height=24)\n",
+    "        elif e['type_of_event'] == \"yellow-card-second\":\n",
+    "            f_event_type = open(\"./statics/yellow-card-second.svg.png\", 'rb').read()\n",
+    "            event_type = widgets.Image(value=f_event_type, format='png', width=50, height=24)\n",
+    "        elif e['type_of_event'] in ['goal-own','goal-penalty', 'goal']:\n",
+    "            goal_type_out = widgets.Output(layout={'border': '1px solid red'})\n",
+    "            with goal_type_out:\n",
+    "                if e['type_of_event'] == 'goal-own':\n",
+    "                    print(\"o.g.\")\n",
+    "                elif e['type_of_event'] == 'goal-penalty':\n",
+    "                    print(\"pen.\")\n",
+    "            f_event_type = open(\"./statics/goal.svg.png\", 'rb').read()\n",
+    "            if e['type_of_event'] == 'goal':\n",
+    "                event_type = widgets.Image(value=f_event_type, format='png', width=24, height=24)\n",
     "            else:\n",
-    "                event_type = widgets.Output(layout={'border': '1px solid black'})\n",
-    "                with event_type:\n",
-    "                    print(e[\"type_of_event\"])\n",
-    "            event_time = widgets.Output(layout={'border': '3px solid black'})\n",
-    "            with event_time:\n",
-    "                print(e['time'])\n",
-    "            event_player = widgets.Output()\n",
-    "            with event_player:\n",
-    "                print(e['player'])\n",
-    "            event_flag = flag_home if e['team']==x.getHomeTeam() else flag_away\n",
-    "            event_info_box = widgets.HBox([event_time, event_type, event_player, event_flag])\n",
+    "                event_type = widgets.HBox([widgets.Image(value=f_event_type, format='png', width=24, height=24), goal_type_out])\n",
+    "        else:\n",
+    "            event_type = widgets.Output(layout={'border': '1px solid black'})\n",
+    "            with event_type:\n",
+    "                print(e[\"type_of_event\"])\n",
+    "        event_time = widgets.Output(layout={'border': '3px solid black'})\n",
+    "        with event_time:\n",
+    "            print(e['time'])\n",
+    "        event_player = widgets.Output()\n",
+    "        with event_player:\n",
+    "            print(e['player'])\n",
+    "        event_flag = flag_home if e['team']==x.getHomeTeam() else flag_away\n",
+    "        event_info_box = widgets.HBox([event_time, event_type, event_player, event_flag])\n",
+    "        with match_event_list_out:\n",
     "            display(event_info_box)\n",
     "\n",
+    "    # home team statistics output in tab\n",
     "    show_home_statistics_out = widgets.Output()\n",
     "    with show_home_statistics_out:    \n",
     "        for k, v in x.home_team_statistics.items():\n",
     "            if k != \"tactics\" and k != \"starting_eleven\" and k != \"substitutes\":\n",
     "                print(k + \" \" + str(v))\n",
+    "    # away team statistics output in tab\n",
     "    show_away_statistics_out = widgets.Output()\n",
     "    with show_away_statistics_out:    \n",
     "        for k, v in x.away_team_statistics.items():\n",
     "            if k != \"tactics\" and k != \"starting_eleven\" and k != \"substitutes\":\n",
     "                print(k + \" \" + str(v))\n",
-    "\n",
+    "    # show squads\n",
     "    show_starting_eleven_out = widgets.Output()\n",
+    "    home_team_starting_eleven_output_list = []\n",
+    "    away_team_starting_eleven_output_list = []\n",
+    "    sub_title = widgets.Output()\n",
+    "    with sub_title:\n",
+    "        print(\"Substitutes:\")\n",
+    "    team_name = widgets.Output(layout={'border': '2px solid black'})\n",
+    "    with team_name:\n",
+    "        print(x.getHomeTeam().getCountryName())\n",
+    "    home_team_starting_eleven_output_list.append(team_name)\n",
+    "    f_list = []\n",
+    "    for player in x.getHomeTeamStartingEleven():\n",
+    "        player_info = widgets.Output()\n",
+    "        cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
+    "        with player_info:\n",
+    "            p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
+    "                               layout = {'width':'300px','height':'30px'})\n",
+    "            p.style.button_color = home_team_player_pos_color_dict['captain'] if player['captain']\\\n",
+    "                                   else home_team_player_pos_color_dict[player['position']]\n",
+    "            p.player_name = player['name']\n",
+    "            p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "            display(p)\n",
+    "        home_team_starting_eleven_output_list.append(player_info)\n",
+    "    home_team_starting_eleven_output_list.append(sub_title)\n",
+    "    for player in x.getHomeTeamSubstitutes():\n",
+    "        player_info = widgets.Output()\n",
+    "        with player_info:\n",
+    "            p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
+    "                               layout = {'width':'300px','height':'30px'})\n",
+    "            p.style.button_color = home_team_player_pos_color_dict['captain'] if player['captain']\\\n",
+    "                                   else home_team_player_pos_color_dict[player['position']]\n",
+    "            p.player_name = player['name']\n",
+    "            p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "            display(p)\n",
+    "        home_team_starting_eleven_output_list.append(player_info)\n",
+    "\n",
+    "    team_name = widgets.Output(layout={'border': '2px solid black'})\n",
+    "    with team_name:\n",
+    "        print(x.getAwayTeam().getCountryName())\n",
+    "    away_team_starting_eleven_output_list.append(team_name)\n",
+    "    for player in x.getHomeTeamStartingEleven():\n",
+    "        player_info = widgets.Output()\n",
+    "        cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
+    "        with player_info:\n",
+    "            p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
+    "                               layout = {'width':'300px','height':'30px'})\n",
+    "            p.style.button_color = away_team_player_pos_color_dict['captain'] if player['captain']\\\n",
+    "                                  else away_team_player_pos_color_dict[player['position']]\n",
+    "            p.player_name = player['name']\n",
+    "            p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "            display(p)\n",
+    "        away_team_starting_eleven_output_list.append(player_info)\n",
+    "    away_team_starting_eleven_output_list.append(sub_title)\n",
+    "    for player in x.getAwayTeamSubstitutes():\n",
+    "        player_info = widgets.Output()\n",
+    "        with player_info:\n",
+    "            p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
+    "                               layout = {'width':'300px','height':'30px'})\n",
+    "            p.style.button_color = away_team_player_pos_color_dict['captain'] if player['captain']\\\n",
+    "                                   else away_team_player_pos_color_dict[player['position']]\n",
+    "            p.player_name = player['name']\n",
+    "            p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "            display(p)\n",
+    "        away_team_starting_eleven_output_list.append(player_info)\n",
+    "\n",
+    "    home_11_vbox = widgets.VBox(home_team_starting_eleven_output_list)\n",
+    "    away_11_vbox = widgets.VBox(away_team_starting_eleven_output_list)\n",
+    "    both_11_hbox = widgets.HBox([home_11_vbox, away_11_vbox])\n",
     "    with show_starting_eleven_out:\n",
-    "        home_team_starting_eleven_output_list = []\n",
-    "        away_team_starting_eleven_output_list = []\n",
-    "        sub_title = widgets.Output()\n",
-    "        with sub_title:\n",
-    "            print(\"Substitutes:\")\n",
-    "        team_name = widgets.Output(layout={'border': '2px solid black'})\n",
-    "        with team_name:\n",
-    "            print(x.getHomeTeam().getCountryName())\n",
-    "        home_team_starting_eleven_output_list.append(team_name)\n",
-    "        f_list = []\n",
-    "        for player in x.getHomeTeamStartingEleven():\n",
-    "            player_info = widgets.Output()\n",
-    "            cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
-    "            with player_info:\n",
-    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
-    "                                   layout = {'width':'300px','height':'30px'})\n",
-    "                p.style.button_color = home_team_player_pos_color_dict['captain'] if player['captain']\\\n",
-    "                                       else home_team_player_pos_color_dict[player['position']]\n",
-    "                p.player_name = player['name']\n",
-    "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
-    "                display(p)\n",
-    "            home_team_starting_eleven_output_list.append(player_info)\n",
-    "        home_team_starting_eleven_output_list.append(sub_title)\n",
-    "        for player in x.getHomeTeamSubstitutes():\n",
-    "            player_info = widgets.Output()\n",
-    "            with player_info:\n",
-    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
-    "                                   layout = {'width':'300px','height':'30px'})\n",
-    "                p.style.button_color = home_team_player_pos_color_dict['captain'] if player['captain']\\\n",
-    "                                       else home_team_player_pos_color_dict[player['position']]\n",
-    "                p.player_name = player['name']\n",
-    "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
-    "                display(p)\n",
-    "            home_team_starting_eleven_output_list.append(player_info)\n",
-    "\n",
-    "        team_name = widgets.Output(layout={'border': '2px solid black'})\n",
-    "        with team_name:\n",
-    "            print(x.getAwayTeam().getCountryName())\n",
-    "        away_team_starting_eleven_output_list.append(team_name)\n",
-    "        for player in x.getHomeTeamStartingEleven():\n",
-    "            player_info = widgets.Output()\n",
-    "            cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
-    "            with player_info:\n",
-    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
-    "                                   layout = {'width':'300px','height':'30px'})\n",
-    "                p.style.button_color = away_team_player_pos_color_dict['captain'] if player['captain']\\\n",
-    "                                      else away_team_player_pos_color_dict[player['position']]\n",
-    "                p.player_name = player['name']\n",
-    "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
-    "                display(p)\n",
-    "            away_team_starting_eleven_output_list.append(player_info)\n",
-    "        away_team_starting_eleven_output_list.append(sub_title)\n",
-    "        for player in x.getAwayTeamSubstitutes():\n",
-    "            player_info = widgets.Output()\n",
-    "            with player_info:\n",
-    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
-    "                                   layout = {'width':'300px','height':'30px'})\n",
-    "                p.style.button_color = away_team_player_pos_color_dict['captain'] if player['captain']\\\n",
-    "                                       else away_team_player_pos_color_dict[player['position']]\n",
-    "                p.player_name = player['name']\n",
-    "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
-    "                display(p)\n",
-    "            away_team_starting_eleven_output_list.append(player_info)\n",
-    "\n",
-    "        home_11_vbox = widgets.VBox(home_team_starting_eleven_output_list)\n",
-    "        away_11_vbox = widgets.VBox(away_team_starting_eleven_output_list)\n",
-    "        both_11_hbox = widgets.HBox([home_11_vbox, away_11_vbox])\n",
     "        display(both_11_hbox)\n",
     "    if x.isCompleted():\n",
     "        match_info_tab = widgets.Tab(children=[match_event_list_out, show_home_statistics_out,\n",
